# flags
# do *not* add CXXFLAGS here, add them in configure.ac
AM_CXXFLAGS = $(CXXFLAGSDEFAULT)
if DEBUG
    AM_CXXFLAGS += -DRE2C_DEBUG
endif
RE2CFLAGS = -b -W

# binary
bin_PROGRAMS = re2c
RE2C = re2c$(EXEEXT)

# sources
SRC_HDR = \
	src/codegen/bitmap.h \
	src/codegen/emit.h \
	src/codegen/go.h \
	src/codegen/input_api.h \
	src/codegen/label.h \
	src/codegen/output.h \
	src/codegen/print.h \
	src/options/msg.h \
	src/options/opt.h \
	src/options/ver_to_vernum.h \
	src/options/warn.h \
	src/adfa/action.h \
	src/adfa/adfa.h \
	src/cfg/cfg.h \
	src/dfa/determinization.h \
	src/dfa/dfa.h \
	src/dfa/tag_history.h \
	src/dfa/tagver_table.h \
	src/dfa/tcmd.h \
	src/nfa/nfa.h \
	src/encoding/case.h \
	src/encoding/ebcdic/ebcdic.h \
	src/encoding/ebcdic/ebcdic_regexp.h \
	src/encoding/enc.h \
	src/encoding/range_suffix.h \
	src/encoding/utf8/utf8.h \
	src/encoding/utf8/utf8_regexp.h \
	src/encoding/utf8/utf8_range.h \
	src/encoding/utf16/utf16_range.h \
	src/encoding/utf16/utf16_regexp.h \
	src/encoding/utf16/utf16.h \
	src/regexp/empty_class_policy.h \
	src/regexp/re.h \
	src/regexp/rule.h \
	src/regexp/tag.h \
	src/compile.h \
	src/skeleton/path.h \
	src/skeleton/skeleton.h \
	src/parse/ast.h \
	src/parse/input.h \
	src/parse/parser.h \
	src/parse/scanner.h \
	src/parse/unescape.h \
	src/debug/debug.h \
	src/util/allocate.h \
	src/util/attribute.h \
	src/util/c99_stdint.h \
	src/util/counter.h \
	src/util/forbid_copy.h \
	src/util/free_list.h \
	src/util/get_dir.h \
	src/util/hash32.h \
	src/util/local_increment.h \
	src/util/lookup.h \
	src/util/range.h \
	src/util/s_to_n32_unsafe.h \
	src/util/slab_allocator.h \
	src/util/smart_ptr.h \
	src/util/static_assert.h \
	src/util/string_utils.h \
	src/util/u32lim.h \
	src/util/uniq_vector.h \
	src/util/wrap_iter.h
SRC = \
	src/codegen/bitmap.cc \
	src/codegen/emit_action.cc \
	src/codegen/emit_dfa.cc \
	src/codegen/label.cc \
	src/codegen/go_construct.cc \
	src/codegen/go_destruct.cc \
	src/codegen/go_emit.cc \
	src/codegen/go_used_labels.cc \
	src/codegen/input_api.cc \
	src/codegen/output.cc \
	src/codegen/print.cc \
	src/options/msg.cc \
	src/options/opt.cc \
	src/options/warn.cc \
	src/nfa/estimate_size.cc \
	src/nfa/re_to_nfa.cc \
	src/adfa/adfa.cc \
	src/adfa/prepare.cc \
	src/debug/dump_adfa.cc \
	src/debug/dump_cfg.cc \
	src/debug/dump_dfa.cc \
	src/debug/dump_interf.cc \
	src/debug/dump_nfa.cc \
	src/cfg/cfg.cc \
	src/cfg/compact.cc \
	src/cfg/dce.cc \
	src/cfg/freeze.cc \
	src/cfg/interfere.cc \
	src/cfg/liveanal.cc \
	src/cfg/normalize.cc \
	src/cfg/optimize.cc \
	src/cfg/rename.cc \
	src/cfg/varalloc.cc \
	src/dfa/closure.cc \
	src/dfa/closure_leftmost.cc \
	src/dfa/closure_posix.cc \
	src/dfa/dead_rules.cc \
	src/dfa/determinization.cc \
	src/dfa/fallback_tags.cc \
	src/dfa/fillpoints.cc \
	src/dfa/find_state.cc \
	src/dfa/minimization.cc \
	src/dfa/posix_precedence.cc \
	src/dfa/tag_history.cc \
	src/dfa/tagver_table.cc \
	src/dfa/tcmd.cc \
	src/encoding/ebcdic/ebcdic_regexp.cc \
	src/encoding/enc.cc \
	src/encoding/range_suffix.cc \
	src/encoding/utf8/utf8_regexp.cc \
	src/encoding/utf8/utf8_range.cc \
	src/encoding/utf8/utf8.cc \
	src/encoding/utf16/utf16_regexp.cc \
	src/encoding/utf16/utf16.cc \
	src/encoding/utf16/utf16_range.cc \
	src/regexp/ast_to_re.cc \
	src/regexp/default_tags.cc \
	src/regexp/fixed_tags.cc \
	src/regexp/nullable.cc \
	src/regexp/rule.cc \
	src/regexp/split_charset.cc \
	src/regexp/tag.cc \
	src/compile.cc \
	src/skeleton/control_flow.cc \
	src/skeleton/generate_code.cc \
	src/skeleton/generate_data.cc \
	src/skeleton/maxpath.cc \
	src/skeleton/skeleton.cc \
	src/main.cc \
	src/parse/ast.cc \
	src/parse/input.cc \
	src/parse/normalize.cc \
	src/parse/scanner.cc \
	src/parse/unescape.cc \
	src/parse/validate.cc \
	src/util/get_dir.cc \
	src/util/s_to_n32_unsafe.cc \
	src/util/range.cc
re2c_SOURCES = \
	$(SRC_HDR) \
	$(SRC)

# autogenerated sources
AUTOGEN_LEX = src/parse/lex.cc
AUTOGEN_VERTOVERNUM = src/options/ver_to_vernum.cc
AUTOGEN_PARSER = src/parse/parser.cc
AUTOGEN_PARSER_HDR = src/parse/y.tab.h
AUTOGEN_HELP = src/options/help.cc
AUTOGEN_SRC = \
	$(AUTOGEN_LEX) \
	$(AUTOGEN_PARSER) \
	$(AUTOGEN_VERTOVERNUM) \
	$(AUTOGEN_HELP) \
	src/parse/lex_conf.cc \
	src/options/parse_opts.cc
AUTOGEN_HDR = \
	src/parse/lex.h \
	$(AUTOGEN_PARSER_HDR)
AUTOGEN = $(AUTOGEN_SRC) $(AUTOGEN_HDR)
nodist_re2c_SOURCES = $(AUTOGEN)

# bootstrap sources
BOOTSTRAP_PARSER = bootstrap/src/parse/parser.cc
BOOTSTRAP_PARSER_HDR = bootstrap/src/parse/y.tab.h
BOOTSTRAP_DOC = bootstrap/doc/re2c.1
BOOTSTRAP_HELP = bootstrap/src/options/help.cc
BOOTSTRAP = \
	$(BOOTSTRAP_DOC) \
	$(BOOTSTRAP_HELP) \
	$(BOOTSTRAP_PARSER) \
	$(BOOTSTRAP_PARSER_HDR) \
	bootstrap/src/parse/lex.cc \
	bootstrap/src/parse/lex.h \
	bootstrap/src/parse/lex_conf.cc \
	bootstrap/src/options/parse_opts.cc \
	bootstrap/src/options/ver_to_vernum.cc

# custom sources
CUSTOM_PARSER = src/parse/parser.ypp
CUSTOM_HELP = doc/help.rst
CUSTOM = \
	$(CUSTOM_PARSER) \
	$(CUSTOM_HELP) \
	src/parse/lex.re \
	src/parse/lex_conf.re \
	src/options/parse_opts.re \
	src/options/ver_to_vernum.re

# docs
SRC_DOC = doc/manpage.rst
SRC_DOC_EXT = \
	doc/manual/contributors.rst_ \
	doc/manual/syntax/rules.rst_ \
	doc/manual/syntax/interface.rst_ \
	doc/manual/syntax/configurations.rst_ \
	doc/manual/syntax/named_definitions.rst_ \
	doc/manual/syntax/regular_expressions.rst_ \
	doc/manual/warnings/warnings_list.rst \
	doc/manual/warnings/warnings_general.rst \
	doc/manual/features/generic_api/generic_api.rst_ \
	doc/manual/features/conditions/conditions.rst_ \
	doc/manual/features/state/state.rst_ \
	doc/manual/features/submatch/submatch.rst_ \
	doc/manual/features/encodings/encodings.rst_ \
	doc/manual/options/options_list.rst
DOC = doc/re2c.1
man_MANS = $(DOC)

EXTRA_DIST = \
	$(BOOTSTRAP) \
	$(CUSTOM) \
	$(SRC_DOC_EXT) \
	CHANGELOG \
	NO_WARRANTY \
	README \
	autogen.sh \
	genhelp.sh \
	doc/loplas.ps \
	doc/sample.bib \
	doc/tdfa/tdfa.pdf \
	examples \
	test

CLEANFILES = \
	$(AUTOGEN) \
	$(DOC)

$(AUTOGEN_PARSER): $(CUSTOM_PARSER)
	$(AM_V_at)$(MKDIR_P) $(@D)
	$(AM_V_GEN) if test $(BISON) = "no"; \
	then \
		cp $(top_srcdir)/$(BOOTSTRAP_PARSER) $@ && \
		cp $(top_srcdir)/$(BOOTSTRAP_PARSER_HDR) $(AUTOGEN_PARSER_HDR); \
	else \
		$(BISON) \
			--output=$@ \
			--defines=$(AUTOGEN_PARSER_HDR) \
			$(top_srcdir)/$(CUSTOM_PARSER); \
	fi

# lexer depends on bison-generated header
# so bison rule must be triggered before lexer rule
$(AUTOGEN_LEX): $(AUTOGEN_PARSER)

$(BOOTSTRAP_PARSER): $(CUSTOM_PARSER)
#	target directory exists (as part of source file tree)
	$(AM_V_GEN) test $(BISON) = "no" || \
	$(BISON) \
		--output=$(top_srcdir)/$@ \
		--defines=$(top_srcdir)/$(BOOTSTRAP_PARSER_HDR) \
		--no-lines \
		$(top_srcdir)/$(CUSTOM_PARSER);

.re.cc:
	$(AM_V_at)$(MKDIR_P) $(@D)
	$(AM_V_GEN) if test -x $(RE2C); \
	then \
		$(top_builddir)/$(RE2C) $(RE2CFLAGS) -o $@ $< && \
		cp $(@:cc=*) $(top_srcdir)/bootstrap/$(@D); \
	else \
		cp $(top_srcdir)/bootstrap/$(@:cc=*) $(@D); \
	fi

all: $(AUTOGEN_SRC)

# rebuild all re2c sources using newly built re2c
.PHONY: bootstrap
bootstrap: all
	rm $(AUTOGEN)
	$(MAKE) all

.PHONY: docs
if REBUILD_DOCS
docs: $(DOC) $(AUTOGEN_HELP)
$(DOC): $(SRC_DOC) $(SRC_DOC_EXT)
	$(AM_V_at)$(MKDIR_P) $(@D)
	$(RST2MAN) $(top_builddir)/$(SRC_DOC) > $@
	cp $@ $(top_srcdir)/$(BOOTSTRAP_DOC)
$(AUTOGEN_HELP): $(CUSTOM_HELP)
	$(AM_V_at)$(MKDIR_P) $(@D)
	$(RST2MAN) $(top_builddir)/$(CUSTOM_HELP) > $@.1
	$(top_srcdir)/genhelp.sh $@.1 $@
	cp $@ $(top_srcdir)/$(BOOTSTRAP_HELP)
else
docs: $(DOC) $(AUTOGEN_HELP)
	@echo "Reconfigure to rebuild docs: ./configure --enable-docs"
$(DOC): $(BOOTSTRAP_DOC)
	$(AM_V_at)$(MKDIR_P) $(@D)
	cp $(top_srcdir)/$(BOOTSTRAP_DOC) $@
$(AUTOGEN_HELP): $(BOOTSTRAP_HELP)
	$(AM_V_at)$(MKDIR_P) $(@D)
	cp $(top_srcdir)/$(BOOTSTRAP_HELP) $@
endif

all-local: docs $(BOOTSTRAP_PARSER)

# tests
TST_SUITE = run_tests.sh
.PHONY: tests
tests: all $(TST_SUITE)
	$(top_builddir)/$(TST_SUITE)
.PHONY: vtests
vtests: all $(TST_SUITE)
	$(top_builddir)/$(TST_SUITE) --valgrind
.PHONY: wtests
wtests: all $(TST_SUITE)
	$(top_builddir)/$(TST_SUITE) --wine -j1

TST_RANGE = testrange
testrange_SOURCES = \
	src/test/range/test-impl.h \
	src/test/range/test.cc \
	src/test/range/test.h \
	src/util/range.cc\
	src/util/range.h \
	src/util/static_assert.h

TST_S_TO_N32_UNSAFE = testston32unsafe
testston32unsafe_SOURCES = \
	src/test/s_to_n32_unsafe/test.cc \
	src/util/s_to_n32_unsafe.cc

TST_VERTOVERNUM = testvertovernum
testvertovernum_SOURCES = \
	src/test/ver_to_vernum/test.cc \
	$(AUTOGEN_VERTOVERNUM)

check_PROGRAMS = \
	$(TST_RANGE) \
	$(TST_S_TO_N32_UNSAFE) \
	$(TST_VERTOVERNUM)

TESTS = $(TST_SUITE) $(check_PROGRAMS)
